syntax ="proto3";
option java_package= "com.stackroute.grpc";

service registration{
  rpc register(request) returns (response);
}

message request{
  string email= 1;
  string password= 2;
  string contactNumber=3;
  string address= 4;
  string occupation= 5;
  string dob=6;
  string gender= 7;
  string username= 8;
  string userType= 9;
}

message response{
  string responseMessage= 1;
}